Set background-repeat and background-attachment properties to prevent the background image from repeating and ensure it stays fixed during scrolling. Update margin for 'order summary' button to improve spacing consistency.

--- a/src/main/resources/static/css/customerPanel.css
+++ b/src/main/resources/static/css/customerPanel.css
@@ -15,6 +15,8 @@
     min-height: 100vh;
     display: flex;
     background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-image: url("../img/menu.jpg")
 }
 
@@ -144,5 +146,5 @@ i {
 }
 
 .btn-success {
-    margin-top: 40px;
+    margin-bottom: 1rem;
 }
